deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: culqi
  labels:
    app: culqi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culqi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: culqi
    spec:
      containers:
        - name: culqi
          image: IMAGE
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 312Mi
            limits:
              cpu: 100m
              memory: 312Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 70
            timeoutSeconds: 10
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: culqi
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: culqi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: culqi
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/group.name: ALB_GROUP_NAME
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /cards
            pathType: Prefix
            backend:
              service:
                name: culqi
                port:
                  number: 3000
          - path: /tokens
            pathType: Prefix
            backend:
              service:
                name: culqi
                port:
                  number: 3000
